# stelpatch

./: .all-contributorsrc  .cursorignore  .gitignore  Cargo.toml  README.md  changes.txt  cwt_output.txt  justfile  moddiff.ps1  stelpatch - Copy.code-workspace  test_stellaris_file.txt
.cursor/rules/: grepping.mdc
.scripts/: release.ps1
cw_format/: Cargo.toml
cw_format/src/: lib.rs  tests.rs  util.rs  visitors.rs
cw_games/: Cargo.toml  agreement_terms.json  armies.json
cw_games/benches/: load_base_game.rs
cw_games/src/: lib.rs  stellaris.rs  victoria_3.rs
cw_model/: Cargo.toml
cw_model/src/: case_insensitive_interner.rs  lib.rs  loader.rs  logs.rs  lowercase_hashmap.rs  model.rs  spur_map.rs  types.rs
cw_model/src/logs/: modifiers.rs
cw_model/src/model/: conditional.rs  entity.rs  game_mod.rs  mod_definition.rs  module.rs  namespace.rs  operator.rs  property.rs  value.rs
cw_model/src/types/: config.rs  cwt.rs  cwt_types.rs  engine.rs  generator.rs  inference.rs  mod.rs  registry.rs
cw_model/src/types/cwt/: analyzer.rs  conversion.rs  definitions.rs  mod.rs  options.rs
cw_model/src/types/cwt/visitors/: alias_visitor.rs  converter.rs  enum_visitor.rs  links_visitor.rs  mod.rs  registry.rs  rule_visitor.rs  scopes_visitor.rs  type_visitor.rs  value_set_visitor.rs
cw_parser/: Cargo.toml
cw_parser/src/: cw.rs  cwt.rs  errors.rs  lib.rs  mod_definition.rs  mod_definition_parser.rs  mod_definition_visitor.rs  model.rs  parser.rs  shared.rs  visitor.rs
lsp/: Cargo.toml  output.txt
lsp/src/: base_game.rs  handlers.rs  interner.rs  lib.rs  main.rs  semantic_token_collector.rs
lsp/src/handlers/: common_validation.rs  completion.rs  diagnostics.rs  document.rs  document_cache.rs  formatting.rs  hover.rs  initialization.rs  mod_detection.rs  modifiers.rs  scope.rs  scoped_type.rs  semantic_tokens.rs  server_lifecycle.rs  settings.rs  type_cache.rs  utils.rs
lsp/src/handlers/cache/: api.rs  collector.rs  core.rs  entity_restructurer.rs  file_index.rs  formatter.rs  full_analysis.rs  game_data.rs  mod.rs  resolver.rs  types.rs  value_set_collector.rs
lsp/src/handlers/cache/collector/: complex_enums.rs  scripted_effect_arguments.rs  value_sets.rs
lsp/src/handlers/cache/resolver_modules/: cache.rs  mod.rs  patterns.rs  properties.rs  references.rs  scopes.rs  subtypes.rs  utils.rs
lsp/src/handlers/cache/resolver_modules/properties/: discovery.rs  handlers.rs  links.rs  navigation.rs  scope_changes.rs  subtypes.rs
lsp/src/handlers/diagnostics/: diagnostic.rs  key.rs  provider.rs  scope_validation.rs  structural.rs  type_validation.rs  util.rs  value.rs
snapshot_tests/: achievements.actual.expected.stellaris
snapshot_tests/agendas/: agendas.actual.stellaris
snapshot_tests/agreement_resources/: 00_agreement_resources.actual.stellaris
snapshot_tests/agreement_term_values/: 00_agreement_term_values.actual.expected.stellaris
snapshot_tests/agreement_terms/: 00_agreement_terms.actual.expected.stellaris
snapshot_tests/ai_budget/: 00_alloys_budget.actual.stellaris  00_dark_matter_budget.actual.expected.stellaris  00_energy_budget.actual.expected.stellaris  00_exotic_gases_budget.actual.expected.stellaris  00_food_budget.actual.expected.stellaris  00_influence_budget.actual.expected.stellaris  00_living_metal_budget.actual.stellaris  00_luxury_goods_budget.actual.stellaris  00_minerals_budget.actual.stellaris  00_minor_artifacts_budget.actual.expected.stellaris  00_nanites_budget.actual.stellaris  00_rare_crystals_budget.actual.expected.stellaris  00_unity_budget.actual.stellaris  00_volatile_motes_budget.actual.stellaris  00_zro_budget.actual.expected.stellaris
snapshot_tests/armies/: 02_event_armies.actual.expected.stellaris
snapshot_tests/attitudes/: attitudes.actual.stellaris
snapshot_tests/bombardment_stances/: 00_bombardment_stances.actual.expected.stellaris
snapshot_tests/buildings/: 11_primitive_buildings.actual.stellaris
snapshot_tests/button_effects/: example.actual.expected.stellaris
snapshot_tests/casus_belli/: 00_casus_belli.actual.expected.stellaris  01_fallen_empire_casus_belli.actual.expected.stellaris  02_event_casus_belli.actual.stellaris  03_megacorp_casus_belli.actual.expected.stellaris  04_federation_casus_belli.actual.expected.stellaris
snapshot_tests/cloaking_strength_levels/: 00_cloaking_strength_levels.actual.expected.stellaris
snapshot_tests/colony_automation_categories/: 00_categories.actual.stellaris
snapshot_tests/component_slot_templates/: 00_component_slots_fixed.actual.stellaris  00_component_slots_strike_craft.actual.stellaris
snapshot_tests/country_container/: 00_country_container.actual.expected.stellaris
snapshot_tests/country_types/: 01_leviathans_country_types.actual.stellaris  02_country_types_distant_stars.actual.stellaris  03_country_types_megacorp.actual.stellaris
snapshot_tests/crisis_objectives/: 00_crisis_objectives.actual.expected.stellaris
snapshot_tests/decisions/: 02_special_decisions.actual.expected.stellaris  04_caravaneer_decisions.actual.expected.stellaris  06_federation_decisions.actual.stellaris  07_overlord_decisions.actual.stellaris  08_first_contact_dlc_decisions.actual.expected.stellaris
snapshot_tests/deposit_categories/: 00_deposit_categories.actual.stellaris
snapshot_tests/deposits/: 00_null_deposit.actual.stellaris  01_orbital_deposits.actual.stellaris  02_sr_deposits.actual.expected.stellaris  03_leviathans_deposits.actual.stellaris  04_distant_stars_deposits.actual.stellaris  08_overlord_deposits.actual.expected.stellaris
src/: cw_model.rs  lib.rs
stelpatch/: Cargo.toml
stelpatch/src/: lib.rs
stelpatch/src/playset/: base_game.rs  diff.rs  flat_diff.rs  game_mod.rs  jaccard.rs  mod_definition.rs  statics.rs  to_string_one_line.rs
stelpatch/src/playset/game_mod/: tests.rs
stelpatch/src/tests/: mod.rs  stellaris.rs
tests/: benchmark.rs  snapshot_tests.rs
vscode-extension/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json
vscode-extension-victoria-3/: LICENSE  README.md  package-lock.json  package.json
(+202 files in other folders)
