[package]
name = "cw_model"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
colored = "3.0.0"
cw_parser = { path = "../cw_parser" }
dirs = "6.0.0"
glob = "0.3.1"
indent = "0.1.1"
path-slash = "0.2.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"