[package]
name = "cw_lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
cw_format = { path = "../cw_format" }
cw_games = { path = "../cw_games" }
cw_model = { path = "../cw_model" }
cw_parser = { path = "../cw_parser" }
dashmap = "6.1"
self_cell = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
