[package]
name = "cw_lsp"
version = "0.0.5"
edition = "2024"

[[bin]]
name = "diagnostics_runner"
path = "src/bin/diagnostics_runner.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.1"
cw_format = { path = "../cw_format" }
cw_games = { path = "../cw_games" }
cw_model = { path = "../cw_model" }
cw_parser = { path = "../cw_parser" }
dashmap = "6.1"
dirs = "6.0.0"
futures = "0.3"
indicatif = { version = "0.17", features = ["rayon"] }
lasso = { version = "0.7.3", features = ["multi-threaded"] }
mimalloc = "0.1.47"
rayon = "1.10.0"
self_cell = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["stellaris"]
stellaris = []
victoria_3 = []

