[package]
name = "stelpatch"
version = "0.1.0"
edition = "2024"

[lib]
name = "stelpatch"
path = "src/lib.rs"

[[bin]]
name = "moddiff"
path = "bin/moddiff.rs"

[[bin]]
name = "benchmark"
path = "bin/benchmark.rs"

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
bumpalo = { version = "3.12.0", features = ["collections"] }
cached = "0.42.0"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
colored-diff = "0.2.3"
const_format = "0.2.30"
cw_parser = { path = "../cw_parser" }
dashmap = { version = "5.4.0", features = ["rayon"] }
dirs = "5.0.0"
fn-fixture = "1.0.2"
futures = "0.3.28"
glob = "0.3.1"
indent = "0.1.1"
indent_write = "2.2.0"
lasso = { version = "0.7.2", features = ["ahasher", "multi-threaded"] }
lazy_static = "1.4.0"
nohash-hasher = "0.2.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
normpath = "1.1.1"
path-slash = "0.2.1"
rayon = "1.7.0"
regex = "1.8.4"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
string-interner = "0.14.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["fs", "io-util"] }
walkdir = "2.3.3"
winnow = "0.7.11"
winreg = "0.50.0"
